1998-12-04  Jaka Mocnik <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.h: removed GNOME_MDI_REDRAW enum.
	* gnome-mdi.c (gnome_mdi_set_mode): fixed a bug that caused
	a toplevel window to be opened during the initial call.
	(gnome_mdi_add_toplevel_view): make it do what you want it
	to (One Of The Few, Pink Floyd, Final Cut, 1983) ;).
	* gnome-mdi-session.h: changed typedef GnomeMDIChildCreate to
	GnomeMDIChildCreator - it sounds better ;).
	* gnome-mdi-session.c (gnome_mdi_save_state): properly save
	window origins. fixed window ids to REALLY be the pointers
	to GnomeApps. session saving should now work for all modes.
	(widget_parent_func): removed. use view_window_func instead.
	(window_list_func): removed.

1998-12-03  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-canvas.c: Indentation fixes.  Also, the main canvas module
	now has full documentation!  Wheee!

1998-12-02  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-about.c (gnome_about_new): Add checks.

Wed Dec  2 12:51:54 1998  Raph Levien  <raph@gimp.org>

	* gnome-canvas.h:
	* gnome-canvas.c (gnome_canvas_request_redraw): This is the
	microtile patch. Added gnome_canvas_request_redraw_uta, and
	it all works with microtiles now.

1998-12-02  Martin Baulig  <martin@home-of-linux.org>

	* gnome-properties.c: Added new GnomeProperty code here.

	* gnome-property-entries.[ch]: New files. Makes it more easy
	to create commonly used property entries like font properties etc.

1998-12-01  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (gil_button_press): Grab the rectangle
	selection item to grab the mouse.
	(gil_button_release): Ungrab the item and thus the mouse.
	(gil_button_press): Use a nice stipple pattern for the selection
	rectangle.
	(gil_mark_region): Do not look amateurish; make the selection
	rectangle only extend to the borders of the window.
	(gnome_icon_list_thaw): Do not allow thaws if the freeze counter
	is <= zero.
	Reverted all gil->frozen > 0 tests.
