@@ -14,7 +14,7 @@ extern GtkType GTK_TYPE_GNOME_CLIENT_STATE;
 extern GtkType GTK_TYPE_GNOME_FONT_PICKER_MODE;
 extern GtkType GTK_TYPE_GNOME_ICON_LIST_MODE;
 extern GtkType GTK_TYPE_GNOME_MDI_MODE;
-extern GtkType GTK_TYPE_GNOME_PROPERTY_REQUEST;
+extern GtkType GTK_TYPE_GNOME_PROPERTY_ACTION;
 extern GtkType GTK_TYPE_GNOME_STOCK_PIXMAP_TYPE;
 extern GtkType GTK_TYPE_GNOME_PREFERENCES_TYPE;
 extern GtkType GTK_TYPE_GNOME_WIN_LAYER;
