@@ -14,7 +14,7 @@ GtkType GTK_TYPE_GNOME_CLIENT_STATE = 0;
 GtkType GTK_TYPE_GNOME_FONT_PICKER_MODE = 0;
 GtkType GTK_TYPE_GNOME_ICON_LIST_MODE = 0;
 GtkType GTK_TYPE_GNOME_MDI_MODE = 0;
-GtkType GTK_TYPE_GNOME_PROPERTY_REQUEST = 0;
+GtkType GTK_TYPE_GNOME_PROPERTY_ACTION = 0;
 GtkType GTK_TYPE_GNOME_STOCK_PIXMAP_TYPE = 0;
 GtkType GTK_TYPE_GNOME_PREFERENCES_TYPE = 0;
 GtkType GTK_TYPE_GNOME_WIN_LAYER = 0;
