@@ -1,3 +1,7 @@
+1998-12-03  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-about.c (gnome_about_new): I got a bit carried away.
+
 1998-12-04  Jaka Mocnik <jaka.mocnik@kiss.uni-lj.si>
 
 	* gnome-mdi.h: removed GNOME_MDI_REDRAW enum.
